# fixedfile-highlighter

./: Cargo.toml  README.md
.github/workflows/: rust-build.yml
src/: main.rs
