[package]
name = "fixedfile-highlighter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.3", features = ["derive"] }
csv = "1.2.2"
log = "0.4.19"
pretty_env_logger = "0.5.0"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
